Fix padding for main Do not overlap footer

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -3,5 +3,6 @@ h1 {
 }
 
 main {
-  padding: 1.5em;
+  padding-top: 1.5em;
+  padding-bottom: 5.5em;
 }
